Fixed typos/made small corrections

--- a/04_Ch_5_Linearity/061-Linear_functions.ipynb
+++ b/04_Ch_5_Linearity/061-Linear_functions.ipynb
@@ -61,7 +61,7 @@
     "A strategy that we have embraced so far has been to turn algebraic questions into geometric ones. Our foundation for this strategy has been the vector space, which allows us to reason abut a wide range of objects (vectors, polynomials, word histograms, and functions) as “arrows” that we can add, stretch, flip and rotate. Our canonical approach to transforming one vector into another has been through matrix-vector multiplication: we start with a vector $\\vv x$ and create a new vector via the mapping $\\vv x \\mapsto A \\vv x$.\n",
     "\n",
     "Our goal in this lecture is to give you a brief introduction to the theory of _linear functions_, of which the function\n",
-    "$f(\\vv x) =A \\vv x$, is a special case. Linear functions are also known as linear maps, or when applied to function spaces, linear operators. These functions lie at the heart of robotics, computer graphics, quantum mechanics, and dynamical systems. We will see that by introducing just a little bit more abstraction, we can reason about all of these different settings using the ere mathematical machinery."
+    "$f(\\vv x) =A \\vv x$, is a special case. Linear functions are also known as linear maps, or when applied to function spaces, linear operators. These functions lie at the heart of robotics, computer graphics, quantum mechanics, and dynamical systems. We will see that by introducing just a little bit more abstraction, we can reason about all of these different settings using the same mathematical machinery."
    ]
   },
   {
@@ -111,7 +111,7 @@
     ":::\n",
     "\n",
     ":::{note}\n",
-    "We made no assumptions about $V$ and $W$ in [](#zero_id_scale_eg) beyond them being vector spaces.They could be Eucledian spaces, function spaces, or even matrix spaces, and our statements would be equally valid.\n",
+    "We made no assumptions about $V$ and $W$ in [](#zero_id_scale_eg) beyond them being vector spaces .They could be Eucledian spaces, function spaces, or even matrix spaces, and our statements would be equally valid.\n",
     ":::\n",
     "\n",
     ":::{prf:example} Matrix Multiplication\n",
