--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/076-repeated_complex_eigenvalues.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/076-repeated_complex_eigenvalues.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "A couple of observations about the example above:\n",
     "\n",
-    "* $\\lambda_1$ and $\\lambda_2$ are *complex conjugates*, i.e., $\\lambda_{-1} = \\overline{\\lambda_2}$, as are $\\vv{v_1}$ and $\\vv{v_2}$. This is a general fact about *real* matrices:\n",
+    "* $\\lambda_1$ and $\\lambda_2$ are *complex conjugates*, i.e., $\\lambda_{1} = \\overline{\\lambda_2}$, as are $\\vv{v_1}$ and $\\vv{v_2}$. This is a general fact about *real* matrices:\n",
     "\n",
     ":::{prf:theorem} Complex eigenvalues of real matrice occur in conjugate pairs\n",
     ":label: complex-eigenvalue-thm\n",
@@ -152,7 +152,7 @@
     ":::{prf:theorem} Number of distinct eigenvalues of an $n\\times n$ real matrix\n",
     ":label: distinct-eigenvalue-thm\n",
     "\n",
-    "An $n\\times n$ real matrix has at least one, and at most $n$, distinct complex eigenvalues.\n",
+    "An $n\\times n$ real matrix has at least one, and at most $n$, distinct eigenvalues.\n",
     ":::"
    ]
   }
