--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
@@ -114,7 +114,7 @@
     "An isotope's *half-life* $t_*$ is how long it takes for the amount of a sample to decay to half its initial value, i.e., $u(t_*) = \\frac 1 2 u(0)$. To determine $t_*$, we solve\n",
     "\n",
     "\\begin{align*}\n",
-    "    &u(t_*) = u(0) e^{-\\gamma t_2} = \\frac 1 2 u(0)\\\\\n",
+    "    &u(t_*) = u(0) e^{-\\gamma t_*} = \\frac 1 2 u(0)\\\\\n",
     "    &\\iff e^{-\\gamma t_*} = \\frac 1 2 \\iff t_* = \\frac{\\log 2}{\\gamma}\n",
     "\\end{align*}\n",
     ":::\n",
@@ -270,7 +270,7 @@
     "\n",
     "* We have assumed *real* eigenvalues and eigenvectors throughtout. It turns out our analysis holds true even when eigenvalues/vectors are complex; however, interpreting the results as solutions requires a little more care (we'll address this next class).\n",
     "\n",
-    "* [(SOL)](#expr:SOL) does not hold if a matrix is not diagonalizable. We'll see a brief previous of how to deal with matrices we can't diagonalize later (you'll see much more in ESE 2100).\n",
+    "* [(SOL)](#expr:SOL) does not hold if a matrix is not diagonalizable. We'll see a brief preview of how to deal with matrices we can't diagonalize later (you'll see much more in ESE 2100).\n",
     "```"
    ]
   },
