--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/079-Longitudinal_Dynamics.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "## Aircraft Longitudinal Dynamics\n",
-    "A passenger aircraft spends most of the flight near a constant speed and altitude. However, during the coarse of the flight, wind knocks the aircraft away from its desired operating condition. To return to the desired operating condition, the aircraft can adjust its *thrust*, which is a force in the direction that the airplane is pointing. The aircraft also has two flaps on the tail called *elevators* which can be adjusted to control the pitch of the plane, illustrated below. \n",
+    "A passenger aircraft spends most of the flight near a constant speed and altitude. However, during the course of the flight, wind knocks the aircraft away from its desired operating condition. To return to the desired operating condition, the aircraft can adjust its *thrust*, which is a force in the direction that the airplane is pointing. The aircraft also has two flaps on the tail called *elevators* which can be adjusted to control the pitch of the plane, illustrated below. \n",
     "```{image} Aileron_pitch.gif\n",
     ":alt: He divided by zero\n",
     ":width: 400px\n",
