completed half of lec 21

--- a/12_Ch_13_Optimization/142-Gradient_Descent.ipynb
+++ b/12_Ch_13_Optimization/142-Gradient_Descent.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: 12.2 Gradient Descent\n",
+    "title: 13.2 Gradient Descent\n",
     "subject:  Optimization\n",
     "subtitle: \n",
-    "short_title: 12.2 Gradient Descent\n",
+    "short_title: 13.2 Gradient Descent\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Apps.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/12_Ch_13_Optimization/142-Gradient_Descent.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 21 - An introduction to unconstrained optimization, gradient descent, and Newton’s method.pdf>`"
    ]
@@ -40,7 +40,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be\n",
+    "Material related to this page, as well as additional exercises, can be found in Chapter 12 in ROB101 textbook by Jesse Grizzle \n",
     "\n",
     "## Learning Objectives\n",
     "\n",
@@ -52,9 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\textbf{Gradient Descent}\n",
+    "## Gradient Descent\n",
     "\n",
-    "Our intuition so far is that we should try to \"walk downhill\" and that the negative gradient $-\\nabla f(x)$ points in the direction of steepest descent at point $x$. Can we turn this into an algorithm for minimizing (at least locally) a cost function $f(x)$?\n",
+    "Our intuition so far is that we should try to \"walk downhill\" and that the negative gradient $-\\nabla f(\\vv x)$ points in the direction of steepest descent at point $x$. Can we turn this into an algorithm for minimizing (at least locally) a cost function $f(x)$?\n",
     "\n",
     "This intuition is precisely the motivation behind the gradient descent algorithm, which starting with an initial guess $x^{(0)}$ iteratively updates the current best guess $x^{(k)}$ of $x^*$ according to:\n",
     "\n",
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Apps.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/12_Ch_13_Optimization/142-Gradient_Descent.ipynb)\n"
    ]
   }
  ],
